--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,6 +4,7 @@
 */
 body,html, #home {
     height: 100%;
+    overflow-x: hidden;
 }
 body{
     background: url(../imagens/capa.png),
@@ -39,6 +40,9 @@ color: white;
     padding-top: 20px;
     padding-bottom: 20px;
 }
+#servicos h2, h3{
+    color:#7c25f8
+}
 .albuns{
     padding: 10px 0;
 }
@@ -71,7 +75,57 @@ h1{
     background-color:white ;
     color: black;
 }
-
+h2{
+    font-size: 3em;
+    font-weight: 700;
+    letter-spacing: -0.04em;
+}
+h3{
+    font-size: 2em;
+    font-weight: 700;
+    letter-spacing: -0.04em;
+}
+#recursos{
+    color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+#recursos h3{
+    color:#9bf0e1
+}
+#recursos h2{
+    color: white;
+}
+.rotacionar{
+    transform: rotate(30deg);
+    -ms-transform: rotate(30deg);
+    -webkit-transform: rotate(30deg);
+    padding-left: 80px;
+}
+footer{
+    background: #000;
+    padding:50px 0px 20px 0px;
+}
+footer h4{
+    color:#919496;
+    font-size:0.8em;
+    text-transform: uppercase;
+}
+footer .navbar-nav a{
+    color: white;
+    font-size: 0.8em;
+}
+footer .navbar-nav a:hover{
+    color:#9bf0e1;
+    text-decoration: none;
+}
+footer ul{
+    list-style: none;
+}
+footer ul li{
+    float: right;
+    margin:0px 5px
+}
 /* Extra small devices (portrait phones, less than 576px) 
 // No media query since this is the default in Bootstrap*/
 
